<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:fitsSystemWindows="true"
    tools:context="com.h.mechanicalengineering.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/app_bar_layout"
        android:fitsSystemWindows="true"
        android:theme="@style/ActionBar.">


        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/collapsTolbarLayout"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="20dp"
            app:expandedTitleMarginStart="40dp"
            app:collapsedTitleGravity="left"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:fitsSystemWindows="true"
                android:src="@drawable/images"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/mechanic"/>


            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:id="@+id/toolbar"
                app:layout_collapseMode="pin"  />


        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/nestedScrollView"
        android:clipToPadding="false"
        android:background="@color/back"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:weightSum="10">



            <LinearLayout
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_height="match_parent"
                android:layout_weight="5">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:id="@+id/news"
                    android:layout_margin="8dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/news"
                    tools:ignore="OnClick"
                    android:onClick="click" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/news"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="#ffffff"/>



                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:id="@+id/employ"
                    android:layout_marginTop="50dp"
                    android:layout_margin="8dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/employ"
                    tools:ignore="OnClick"
                    android:onClick="click"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/employment"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="#ffffff"/>




            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_height="match_parent"
                android:layout_weight="5">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:id="@+id/course"
                        android:scaleType="fitXY"
                        android:layout_margin="8dp"
                        android:src="@drawable/onvan"
                        tools:ignore="OnClick"
                        android:onClick="click"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/courses"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="#ffffff"/>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:id="@+id/dictionary"
                        android:layout_margin="8dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/dictionary"
                        tools:ignore="OnClick"
                        android:onClick="click"/>



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/dictionary"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="#ffffff"/>




            </LinearLayout>

    </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
